--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rumold",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "fast and simple mbtiles server",
   "main": "dist/index.js",
   "analyze": true,
@@ -14,6 +14,9 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/mystand/rumold.git"
+  },
+  "engines": {
+    "node" : ">=0.10.0 <0.11.0"
   },
   "scripts": {
     "start": "./bin/rumold",
@@ -29,16 +32,19 @@
     "mbtiles server",
     "vector tiles server"
   ],
+  "devDependencies": {
+    "coffee-script": "1.10.0"
+  },
   "dependencies": {
-    "argparse": "1.0.2",
-    "async": "1.2.1",
+    "argparse": "1.0.3",
+    "async": "1.5.0",
     "cachecache": "1.0.1",
-    "express": "4.12.4",
-    "mbtiles": "0.8.0",
+    "express": "4.13.3",
+    "mbtiles": "0.8.2",
     "npid": "0.4.0",
-    "tilelive": "5.7.1",
+    "tilelive": "5.10.0",
     "tilelive-blend": "0.1.1",
-    "tilelive-merge": "1.0.0",
+    "tilelive-merge": "1.0.2",
     "underscore": "1.8.3"
   }
 }
